--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <!--[if (gt IEMobile 7)|!(IEMobile)]><!--> <html class="no-js"> <!--<![endif]-->
     <head>
         <meta charset="utf-8">
-        <title></title>
+        <title>HTML5 Mobile APP</title>
         <meta name="description" content="">
         <meta name="HandheldFriendly" content="True">
         <meta name="MobileOptimized" content="320">
@@ -35,12 +35,21 @@
 
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
+      <!--  <link rel="stylesheet" href="css/bootstrap.css"> -->
+        <link rel="stylesheet" href="css/manuel.css">
         <script src="js/vendor/modernizr-2.6.2.min.js"></script>
+        
     </head>
     <body>
 
         <!-- Add your site or application content here -->
+<div id="videobox">
+	<video width="240" height="320" controls="controls">
+		<source src="http://www.youtube.com/watch?v=dJ8v1XZS7uc" type="video/youtube">
+		<track src="subtitles_en.vtt" kind="subtitles" srclang="en" label="english"></track>
+	</video>
 
+</div>
         <script src="js/vendor/zepto.min.js"></script>
         <script src="js/helper.js"></script>
 
